# sclip

./: .gitignore  AGENTS.md  CHANGELOG.md  COLAB_GUIDE.md  README.md  TUTORIAL.md  pyproject.toml  requirements.txt  sclip-prd.txt  smartclip_colab.ipynb
src/: __init__.py  main.py
src/commands/: __init__.py  clip.py  setup.py
src/services/: __init__.py  audio.py  downloader.py  face_tracker.py  gemini.py  renderer.py  speaker_tracker.py
src/services/analyzers/: __init__.py  base.py  deepseek.py  gemini.py  groq.py  mistral.py  ollama.py  openai.py
src/services/transcribers/: __init__.py  base.py  chunking.py  deepgram.py  elevenlabs.py  groq.py  local.py  openai.py
src/types/: __init__.py
src/utils/: __init__.py  captions.py  cleanup.py  config.py  ffmpeg.py  logger.py  srt_parser.py  validation.py  video.py
tests/: __init__.py
